--- a/samples/dt_freeze_row.html
+++ b/samples/dt_freeze_row.html
@@ -4,7 +4,7 @@
 
 
     <meta http-equiv="content-type" content="text/html; charset=utf-8">
-<title>Basic Example</title>
+<title>Basic Example for Freeze row</title>
 
 <style type="text/css">
 /*margin and padding on body element
