--- a/samples/dt_freeze_row.html
+++ b/samples/dt_freeze_row.html
@@ -3,7 +3,7 @@
 <head>
 
     <meta http-equiv="content-type" content="text/html; charset=utf-8">
-<title>Basic Example for Freeze row</title>
+<title>Basic Example for Freeze row sorting</title>
 
 <style type="text/css">
 /*margin and padding on body element
