--- a/samples/dt_freeze_row.html
+++ b/samples/dt_freeze_row.html
@@ -76,6 +76,7 @@ YAHOO.util.Event.addListener(window, "load", function() {
 			}
 		}
 		//console.log(this._newRecs);
+		console.log(this._newRecs.reverse());
 		return this._newRecs.reverse();
 	};
     YAHOO.example.Basic = function() {
