--- a/samples/dt_freeze_row.html
+++ b/samples/dt_freeze_row.html
@@ -63,7 +63,6 @@ YAHOO.util.Event.addListener(window, "load", function() {
 		});
 	};
 	YAHOO.widget.RecordSet.prototype.reverseRecords = function() {
-		//console.log('inside reverse function');
 		this._newRecs = new Array();
 		var recLen = this._records.length;
 		var rec = null;
@@ -75,9 +74,8 @@ YAHOO.util.Event.addListener(window, "load", function() {
 				continue;
 			}
 		}
-		//console.log(this._newRecs);
-		console.log(this._newRecs.reverse());
 		this._records = this._newRecs.reverse();
+		console.log(this._records);
 		this._records.push(rec);
 		return this._records;
 	};
