--- a/samples/dt_freeze_row.html
+++ b/samples/dt_freeze_row.html
@@ -79,6 +79,7 @@ YAHOO.util.Event.addListener(window, "load", function() {
 		console.log("newRecs---");
 		console.log(this._newRecs);
 		this._records = {};
+		console.log(this._records);
 		this._records = this._newRecs.reverse();
 		console.log(this._records);
 		this._records.push(rec);
