--- a/samples/dt_freeze_row.html
+++ b/samples/dt_freeze_row.html
@@ -65,22 +65,24 @@ YAHOO.util.Event.addListener(window, "load", function() {
 	YAHOO.widget.RecordSet.prototype.reverseRecords = function() {
 		if(!this._newRecs) {
 			this._newRecs = new Array();
-			var recLen = this._records.length;
-			var rec = null;
-			for(var i=0; i<recLen; i++) {
-				rec = this._records[i];
-				if(!rec.freeze) {
-					this._newRecs.push(rec);
-				} else {
-					continue;
-				}
+		}
+		var recLen = this._records.length;
+		var rec = null;
+		for(var i=0; i<recLen; i++) {
+			rec = this._records[i];
+			if(!rec.freeze) {
+				this._newRecs.push(rec);
+			} else {
+				continue;
 			}
 		}
 		console.log("newRecs---");
 		console.log(this._newRecs);
-		this._records = {};
+		this._records = [];
+		console.log("records--");
 		console.log(this._records);
 		this._records = this._newRecs.reverse();
+		console.log("after sort--");
 		console.log(this._records);
 		this._records.push(rec);
 		return this._records;
