--- a/samples/dt_freeze_row.html
+++ b/samples/dt_freeze_row.html
@@ -63,9 +63,7 @@ YAHOO.util.Event.addListener(window, "load", function() {
 		});
 	};
 	YAHOO.widget.RecordSet.prototype.reverseRecords = function() {
-		if(!this._newRecs) {
-			this._newRecs = new Array();
-		}
+		this._newRecs = [];
 		var recLen = this._records.length;
 		var rec = null;
 		for(var i=0; i<recLen; i++) {
