Styling the freeze row differently

--- a/samples/dt_freeze_row.html
+++ b/samples/dt_freeze_row.html
@@ -105,7 +105,7 @@ YAHOO.util.Event.addListener(window, "load", function() {
 				oRecord.freeze = true;
 //				YAHOO.util.Dom.addClass(YAHOO.util.Dom.get(oRecord.getId()), "freeze-prop");
 			}
-			console.log(oRecord.getId());
+			console.log(YAHOO.util.Dom.get(oRecord.getId()));
 			elLiner.innerHTML = oData;
 		};
 		YAHOO.widget.DataTable.freezeFormat = rowFormatter;
