--- a/samples/dt_freeze_row.html
+++ b/samples/dt_freeze_row.html
@@ -106,7 +106,7 @@ YAHOO.util.Event.addListener(window, "load", function() {
 //				YAHOO.util.Dom.addClass(YAHOO.util.Dom.get(oRecord.getId()), "freeze-prop");
 			}
 			console.log(oRecord._sId);
-			console.log(YAHOO.util.Dom.get(oRecord.getId()));
+			console.log(YAHOO.util.Dom.get(oRecord._sId));
 			elLiner.innerHTML = oData;
 		};
 		YAHOO.widget.DataTable.freezeFormat = rowFormatter;
