--- a/samples/dt_freeze_row.html
+++ b/samples/dt_freeze_row.html
@@ -127,6 +127,7 @@ YAHOO.util.Event.addListener(window, "load", function() {
                 myColumnDefs, myDataSource, {caption:"DataTable Caption"});
         myDataTable.subscribe("renderEvent", function() {
 			var recSet = myDataTable.getRecordSet();
+			console.log(recSet);
 			var freezeClass = function (el) {
 				console.log(el);
 				if(el.freeze) {
