Styling the freeze row differently

--- a/samples/dt_freeze_row.html
+++ b/samples/dt_freeze_row.html
@@ -34,9 +34,14 @@ body {
 
 /**** Style to apply for freeze row ****/
 .yui-dt-freeze {
-	color: #000;
-	background-color:#EEDDFF !important;
+	color: #fff;
+	background-color:#7D3883 !important;
 	font-weight: bold;
+}
+
+.yui-dt-freeze td.yui-dt-asc,
+.yui-dt-freeze td.yui-dt-desc {
+    background-color: #7D3883 !important;
 }
 
 </style>
