--- a/index.html
+++ b/index.html
@@ -1,1 +1,43 @@
-This is master branch.
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
+<html>
+<head>
+
+<meta http-equiv="content-type" content="text/html; charset=utf-8">
+<title>L Ravi Kiran GitHub Pages</title>
+
+<style type="text/css">
+/*margin and padding on body element
+  can introduce errors in determining
+  element position and are not recommended;
+  we turn them off as a foundation for YUI
+  CSS treatments. */
+body {
+margin:10%;
+padding:0;
+font-family: "lucida grande",lucida,"helvetica nueue",helvetica,arial;
+font-size: 12px;
+}
+
+h1, h2, h3, h4, h5, h6 {
+    text-shadow: 1px 1px 1px #DDDDDD;
+}
+
+</style>
+</head>
+
+<body>
+
+<h1>Welcome, this is my space where I used to upload the examples and working hacks on different JS libraries.</h1>
+
+<div>
+<p>Sample Pages using YUI 2 JS library</p>
+
+<ul style="padding-left: 10px;">
+    <li><a href="samples/dt_freeze_row.html">First example</a></li>
+    <li><a href="samples/freezeRow.html">Freezing a row in DataTable</a></li>
+    <li><a href="#">Freezing a column in DataTable</a></li>
+</ul>
+</div>
+
+</body>
+</html>
