--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@ h1, h2, h3, h4, h5, h6 {
 
 <ul style="padding-left: 50px;">
     <li><a href="yui/freezeRow.html">Freezing a row in DataTable</a></li>
-	<li><a href="yui/examples/Folder-Style-TreeView.html">Folder Style TreeView</a></li>
-	<li><a href="yui/examples/YUI-Autocomplete-ViewList-Widgets/autocomplete-view-list.html">Autocomplete & View List</a></li>
-	<li><a href="yui/examples/Adding-Updating-Del.html">Adding, Updating, and Deleting Rows in Data Table</a></li>
-	<li><a href="yui/examples/DataTable-Menu.html">DataTable Menu Integration</a></li>
+	<li><a href="yui/examples/Folder-Style-TreeView.html">Folder Style TreeView</a>&nbsp;[Done by Collegue Ram]</li>
+	<li><a href="yui/examples/YUI-Autocomplete-ViewList-Widgets/autocomplete-view-list.html">Autocomplete & View List</a>&nbsp;[Done by Collegue Ram]</li>
+	<li><a href="yui/examples/Adding-Updating-Del.html">Adding, Updating, and Deleting Rows in Data Table</a>&nbsp;[Done by Collegue Ram]</li>
+	<li><a href="yui/examples/DataTable-Menu.html">DataTable Menu Integration</a>&nbsp;[Done by Collegue Ram]</li>
 </ul>
 </div>
 
