Adding few examples on YUI3

--- a/index.html
+++ b/index.html
@@ -40,6 +40,18 @@ h1, h2, h3, h4, h5, h6 {
 	<li><a href="yui/examples/DataTable-Menu.html">DataTable Menu Integration</a>&nbsp;[Done by Collegue Ram]</li>
 </ul>
 </div>
+<div style="clear:both; height: 10px;"></div>
+<div>
+<p>Sample Pages using YUI 3 JS library</p>
+
+<ul style="padding-left: 50px;">
+    <li><a href="yui/examples/yui3_first.html">First example page developed using YUI3</a></li>
+	<li><a href="yui/examples/yui3_event_fire.html">Event firing manually using YUI3 Event module</a></li>
+	<li><a href="yui/examples/yui3_event_delegation.html">Event delegation using YUI3</a></li>
+	<li><a href="yui/examples/yui3_app_example.html">YUI3 App Framework example</a></li>
+	<li><a href="yui/examples/yui3_touch_example.html">YUI3 Touch Event example</a></li>
+</ul>
+</div>
 
 </body>
 </html>
