Some small bug in one of the element

--- a/yui/examples/yui3_first.html
+++ b/yui/examples/yui3_first.html
@@ -31,7 +31,7 @@
 				showMessage();
 			});
 			var submitBtn = Y.one("#submitBtn");
-			submitBrn.on("click", function(e) {
+			submitBtn.on("click", function(e) {
 				e.preventDefault();
 				e.stopPropagation();
 				message = "Message from Button click";
