Some randium change

--- a/yui/examples/yui3_first.html
+++ b/yui/examples/yui3_first.html
@@ -14,7 +14,7 @@
 		<div>
 			<a href="http://github.com/" id="gitLink" class="gitLink">GitHub</a>
 			<div style="clear; both; height: 15px;"></div>
-			<button id="submitBtn" name="submitBtn" value="Submit"/>
+			<button id="submitBtn" name="submitBtn">Submit</button>
 		</div>
 	</body>
 		<script type="text/javascript" src="http://yui.yahooapis.com/3.4.1/build/yui/yui-min.js"></script>
