--- a/yui/examples/yui3_first.html
+++ b/yui/examples/yui3_first.html
@@ -5,8 +5,7 @@
 	</head>
 	<body class="yui3-skin-sam">
 		<p>
-			In this example want to show a simple application of events and firing them manually. As we know, each click and any action performed by user browser,<br/>
-			used do all the ground work for event fire process. Now using YUI3, its very use to add this feature.
+			Adding one link and one button to show the different actions performed and events handling using YUI3 Lib. Following 2 different actions has defined:
 			<ol>
 				<li>Link, which just redirect user to desired link upon clicking.</li>
 				<li>Button, which will restrict the submission to next page.</li>
